@@ -140,7 +140,8 @@ public class JunitTestRunner {
                 testsRunning = true;
             }
             Thread.currentThread().setContextClassLoader(tcl);
-            Consumer currentTestAppConsumer = (Consumer) tcl.loadClass(CurrentTestApplication.class.getName()).newInstance();
+            Consumer currentTestAppConsumer = (Consumer) tcl.loadClass(CurrentTestApplication.class.getName())
+                    .getDeclaredConstructor().newInstance();
             currentTestAppConsumer.accept(testApplication);
 
             Set<UniqueId> allDiscoveredIds = new HashSet<>();
@@ -355,35 +356,9 @@ public class JunitTestRunner {
                         }
                         if (testExecutionResult.getStatus() == TestExecutionResult.Status.FAILED) {
                             Throwable throwable = testExecutionResult.getThrowable().get();
-                            if (testClass != null) {
-                                //first we cut all the platform stuff out of the stack trace
-                                Throwable cause = throwable;
-                                while (cause != null) {
-                                    StackTraceElement[] st = cause.getStackTrace();
-                                    for (int i = st.length - 1; i >= 0; --i) {
-                                        StackTraceElement elem = st[i];
-                                        if (elem.getClassName().equals(testClass.getName())) {
-                                            StackTraceElement[] newst = new StackTraceElement[i + 1];
-                                            System.arraycopy(st, 0, newst, 0, i + 1);
-                                            st = newst;
-                                            break;
-                                        }
-                                    }
-
-                                    //now cut out all the restassured internals
-                                    //TODO: this should be pluggable
-                                    for (int i = st.length - 1; i >= 0; --i) {
-                                        StackTraceElement elem = st[i];
-                                        if (elem.getClassName().startsWith("io.restassured")) {
-                                            StackTraceElement[] newst = new StackTraceElement[st.length - i];
-                                            System.arraycopy(st, i, newst, 0, st.length - i);
-                                            st = newst;
-                                            break;
-                                        }
-                                    }
-                                    cause.setStackTrace(st);
-                                    cause = cause.getCause();
-                                }
+                            trimStackTrace(testClass, throwable);
+                            for (var i : throwable.getSuppressed()) {
+                                trimStackTrace(testClass, i);
                             }
                         }
                     }
@@ -425,6 +400,39 @@ public class JunitTestRunner {
                         notifyAll();
                     }
                 }
+            }
+        }
+    }
+
+    private void trimStackTrace(Class<?> testClass, Throwable throwable) {
+        if (testClass != null) {
+            //first we cut all the platform stuff out of the stack trace
+            Throwable cause = throwable;
+            while (cause != null) {
+                StackTraceElement[] st = cause.getStackTrace();
+                for (int i = st.length - 1; i >= 0; --i) {
+                    StackTraceElement elem = st[i];
+                    if (elem.getClassName().equals(testClass.getName())) {
+                        StackTraceElement[] newst = new StackTraceElement[i + 1];
+                        System.arraycopy(st, 0, newst, 0, i + 1);
+                        st = newst;
+                        break;
+                    }
+                }
+
+                //now cut out all the restassured internals
+                //TODO: this should be pluggable
+                for (int i = st.length - 1; i >= 0; --i) {
+                    StackTraceElement elem = st[i];
+                    if (elem.getClassName().startsWith("io.restassured")) {
+                        StackTraceElement[] newst = new StackTraceElement[st.length - i];
+                        System.arraycopy(st, i, newst, 0, st.length - i);
+                        st = newst;
+                        break;
+                    }
+                }
+                cause.setStackTrace(st);
+                cause = cause.getCause();
             }
         }
     }
@@ -684,6 +692,9 @@ public class JunitTestRunner {
         public boolean test(String logRecord) {
             Thread thread = Thread.currentThread();
             ClassLoader cl = thread.getContextClassLoader();
+            if (cl == null) {
+                return true;
+            }
             while (cl.getParent() != null) {
                 if (cl == testApplication.getAugmentClassLoader()
                         || cl == testApplication.getBaseRuntimeClassLoader()) {
